# ETerrain

./: .gitignore  CMakeLists.txt  android_main.cpp  e_terrain.h  main.cpp  method.cmake  stb.cpp
core/: btl_structure.h  core.cpp  core.h  editor.cpp  editor.h  node.cpp  node.h  typedefs.h
core/graphics/: blend_state.cpp  blend_state.h  buffer_manager.cpp  buffer_manager.h  depthstencil_state.cpp  depthstencil_state.h  graphics_device.cpp  graphics_device.h  graphics_enum.h  graphics_helper.h  graphics_resource.cpp  graphics_resource.h  graphics_structure.h  rasterizer_state.cpp  rasterizer_state.h  render_target.cpp  render_target.h  sampler_state.cpp  sampler_state.h  sampler_state_collection.cpp  sampler_state_collection.h  sprite_batch.cpp  sprite_batch.h  sprite_sortmode.h  texture_collection.cpp  texture_collection.h  vertex_declaration.h  vertex_type.h
core/helpers/: assets_helper.cpp  assets_helper.h  helper.h  imgui_helper.cpp  imgui_helper.h
core/icon/: IconsFontAwesome6.h  IconsMaterialDesign.h
core/math/: color.cpp  color.h  math_defs.h  math_funcs.h  rect2.cpp  rect2.h  rect2i.cpp  rect2i.h  transform_2d.cpp  transform_2d.h  transform_3d.cpp  transform_3d.h  vector2.cpp  vector2.h  vector2i.cpp  vector2i.h
core/nodes/: load_resources.cpp  load_resources.h
core/parser/: bin_parser.cpp  bin_parser.h  btl_structure.h  map_config_parser.cpp  map_config_parser.h  resource_texture_parser.cpp  resource_texture_parser.h  terrain_config_parser.cpp  terrain_config_parser.h
core/scene/2d/: camera_2d.cpp  camera_2d.h  node_2d.cpp  node_2d.h
core/scene/3d/: camera_3d.cpp  camera_3d.h  node_3d.cpp  node_3d.h
core/scene/panel/: game_panel_2d.cpp  game_panel_2d.h  game_panel_3d.cpp  game_panel_3d.h  hex_manager.cpp  hex_manager.h  hex_panel.cpp  hex_panel.h
core/scene/resources/: shader.cpp  shader.h  texture_2d.cpp  texture_2d.h
editor/: editdefs.h  editor.cpp  editor.h  load_resources.cpp  load_resources.h
editor/panel/: game_panel_2d.cpp  game_panel_2d.h  game_panel_3d.cpp  game_panel_3d.h  grid_manager.cpp  grid_manager.h  hex_manager.cpp  hex_manager.h  hex_panel.cpp  hex_panel.h
editor/parser/: bin_parser.cpp  bin_parser.h  btl_structure.h  map_config_parser.cpp  map_config_parser.h  resource_texture_parser.cpp  resource_texture_parser.h  terrain_config_parser.cpp  terrain_config_parser.h
editor/world/: btl_structure.h  land_unit.cpp  land_unit.h  structdefs.h
misc/fonts/: font.h  generate_font_array.py
misc/glsl/: default.frag  game.frag  game.fsh  game.vert  game.vsh  rect.frag  rect.vert  shader_template.h.in
platform/android/: android.cpp  android.h  android_out.cpp  android_out.h
platform/android/project/: settings.gradle.kts
platform/android/project/app/: build.gradle.kts
platform/android/project/app/release/: output-metadata.json
platform/android/project/app/release/baselineProfiles/0/: app-release.dm
platform/android/project/app/release/baselineProfiles/1/: app-release.dm
platform/android/project/app/src/androidTest/java/com/trifingzw/eterrain/: ExampleInstrumentedTest.kt
platform/android/project/app/src/main/: AndroidManifest.xml
platform/android/project/app/src/main/assets/: buildings_hd.xml  plant_hd.xml  stringtable_cn.ini  stringtable_en.ini  tacticalmap.xml  terrain_hd.xml
platform/android/project/app/src/main/assets/config/: def_map.xml  def_mapterrain.xml
platform/android/project/app/src/main/assets/image/: image_general_medal_hd.xml  image_ribbon_hd.xml
platform/android/project/app/src/main/assets/json/: ArmySettings.json  BuildingSettings.json  GeneralSettings.json
platform/android/project/app/src/main/assets/stage/: conquest1.btl  conquest2.btl  conquest3.btl  conquest4.btl  conquest5.btl  conquest6.btl  conquest7.btl  stage10101.btl  stage10102.btl  stage10103.btl
platform/android/project/app/src/main/java/com/trifingzw/eterrain/: MainActivity.kt
platform/android/project/app/src/main/res/values/: strings.xml  themes.xml
platform/android/project/app/src/main/res/values-night/: themes.xml
platform/android/project/app/src/test/java/com/trifingzw/eterrain/: ExampleUnitTest.kt
platform/android/project/gradle/wrapper/: gradle-wrapper.properties
platform/windows/: placeholder_class.cpp  placeholder_class.h
scene/: node.cpp  node.h
scene/2d/: camera_2d.cpp  camera_2d.h  node_2d.h
scene/3d/: camera_3d.cpp  camera_3d.h  node_3d.h
scene/resources/: shader.cpp  shader.h  texture_2d.cpp  texture_2d.h
